--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,28 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+body{
+    margin: 0%;
+    padding: 0%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.nav{
+  height: 100px;
+  width: 100%;
+  background-color:rgb(228, 106, 18);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-right: 10px;
+
+}
+.home, .about, .Contect{
+  margin-left: 20px;
+  color: white;
+  font-size: x-large;
+  text-decoration: none;
+  line-height:10px;
+}
+
+.images{
+  margin-left: 1373px;
+  height: 48px;
 }
