--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,48 @@
+
+
+body{
+    margin: 0%;
+    padding: 0%;
+}
+
+.nav{
+  height: 100px;
+  width: 100%;
+  background-color:rgb(228, 106, 18);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-right: 10px;
+
+}
+.home, .about, .Contect{
+  margin-left: 20px;
+  color: white;
+  font-size: x-large;
+  text-decoration: none;
+  line-height:10px;
+}
+
+.images{
+  margin-left: 1373px;
+  height: 48px;
+}
+
+
+
+
 .cityname{
     width: 892px;
     height: auto;
     border: 1px solid rgb(206, 199, 199);
     text-align: center;
     border-radius: 5px;
+}
+
+.footer{
+    border: 2px solid black;
+    height: 150px;
+    background-color:rgb(228, 106, 18);
+
+    
 }
